fix sidebar overlap issue

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -55,10 +55,6 @@ aside {
 #sidebar {
   padding-top: 20px;
 
-  .affix {
-    top: 80px;
-  }
-
   .logo {
     text-align: center;
     margin-bottom: 10px;
